retrieveUnpackaged/objects/Pollutant__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>42101</fullName>
                </value>
                <value>
                    <fullName>42602</fullName>
                </value>
                <value>
                    <fullName>44201</fullName>
                </value>
                <value>
                    <fullName>85129</fullName>
                </value>
                <value>
                    <fullName>14129</fullName>
                </value>
                <value>
                    <fullName>81102</fullName>
                </value>
                <value>
                    <fullName>88101</fullName>
                </value>
                <value>
                    <fullName>42401</fullName>
                </value>
                <value>
                    <fullName>88501</fullName>
                </value>
                <value>
                    <fullName>88502</fullName>
                </value>
                <value>
                    <fullName>86101</fullName>
                </value>
                <value>
                    <fullName>42600</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pollutant__c</fullName>
        <label>Pollutant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>NO2</fullName>
                </value>
                <value>
                    <fullName>O3</fullName>
                </value>
                <value>
                    <fullName>Pb-PM10</fullName>
                </value>
                <value>
                    <fullName>Pb-TSP</fullName>
                </value>
                <value>
                    <fullName>PM10</fullName>
                </value>
                <value>
                    <fullName>PM25</fullName>
                </value>
                <value>
                    <fullName>SO2</fullName>
                </value>
                <value>
                    <fullName>PM10-25</fullName>
                </value>
                <value>
                    <fullName>NOx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pollutant</label>
    <nameField>
        <label>Pollutant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pollutants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>